# Cpp20_Ultimate_Project_Template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  app1.sln  build.sh  install.sh  run.sh  vulkanapp1.sln
Application1/: Application1.vcxproj  CMakeLists.txt
Application1/src/: Application1.cpp  utils.cpp
StaticLib1/: CMakeLists.txt
StaticLib1/include/: vulkancore.hpp
StaticLib1/src/: main.cpp
VulkanApplication1/: VulkanApplication1.vcxproj
VulkanStaticLib1/: VulkanStaticLib1.vcxproj  VulkanStaticLib1.vcxproj.filters
app1/: CMakeLists.txt  app1.vcxproj  app1.vcxproj.filters  vulkanapp1.vcxproj
app1/src/: main.cpp
cmake/: configure.sh
cmakeapp1/: CMakeLists.txt
cmakeapp1/src/: main.cpp
cmakevulkanapp1/: CMakeLists.txt
docs/: CHANGELOG.md  api-overview.md  linux.md  roadmap.md  windows.md
shared/safe_io/: CMakeLists.txt
shared/safe_io/include/safe_io/: utils.hpp
shared/safe_io/src/: utils.cpp
vulkanapp1/: CMakeLists.txt  Header.h  vulkanapp1.cpp  vulkanapp1.vcxproj.filters
